fixed tutorial spacing

--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -299,3 +299,12 @@ details p {
   margin: 0 0 1rem;
   padding-top: 1rem;
 }
+
+/* tutorial */
+button.carousel-control-next,
+button.carousel-control-prev {
+  color: black !important;
+  /* background-color: black; */
+  right: 0px;
+  /* top: 50%; */
+}
